# phase-coex-tracing

./: .gitignore  README.md  pyproject.toml
examples/: example_run.py
src/sgcmc_coexistence/: __init__.py  calphy_runner.py  coexistence.py  io.py  lammps_runner.py  sgcmc.py  workflow.py
